# particle_simulation_rewritten_c

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  TODO
include/: exceptions.h  main.h  posix_compatability.h  vector.h
lib/: exceptions.c  posix_compatability.c  vector.c
src/: main.c
